// grpc server to create timeline

syntax = "proto3";

package api.v1;

option go_package = "github.com/bangumi/server/api";

service TimeLineService {
  // Debug function
  rpc Hello(HelloRequest)returns (HelloResponse){}

  rpc SubjectCollect(SubjectCollectRequest) returns (SubjectCollectResponse) {}

  rpc SubjectProgress(SubjectProgressRequest) returns (SubjectProgressResponse) {}

  rpc EpisodeCollect(EpisodeCollectRequest) returns (EpisodeCollectResponse) {}
}

message HelloRequest {
  string name = 1 ;
}

message HelloResponse {
  string message = 1 ;
}

message SubjectCollectResponse {
  bool ok = 1;
}

message SubjectProgressResponse {
  bool ok = 1;
}

message EpisodeCollectResponse {
  bool ok = 1;
}

message Subject {
  uint32 id = 1;
  uint32 type = 2;
  string name = 3;
  string name_cn = 4;
  string image = 5;
  bool series = 6;
  uint32 vols_total = 7;
  uint32 eps_total = 8;
}

message Episode {
  uint32 id = 1;
  uint32 type = 2;
  string name = 3;
  string name_cn = 4;
  string image = 5;
  bool series = 6;
  double sort = 7;
}

// The request message containing the user's name.
message SubjectCollectRequest {
  uint64 user_id = 1;
  Subject subject = 2;
  uint32 collection = 3;
  string comment = 4;
  uint32 rate = 5;
}

// 标记剧集为看过
message EpisodeCollectRequest {
  uint64 user_id = 1;
  Episode last = 2;
  Subject subject = 3;
}

message SubjectProgressRequest {
  uint64 user_id = 1;
  Subject subject = 2;
  uint32 eps_update = 3;
  uint32 vols_update = 4;
}
